codex-rs/core/tests/suite/snapshots/all__suite__scenarios__subagent_browser_auth.snap
---
source: core/tests/suite/scenarios.rs
assertion_line: 910
expression: snapshot
---
Scenario: A subagent waits for an MCP browser sign-in prompt, then receives the accepted response and continues.

## Window 1
Settings:
  include: ["reasoning.encrypted_content"]
  instructions: <MODEL_INSTRUCTIONS>
  model: "gpt-5.5"
  parallel_tool_calls: true
  prompt_cache_key: "<PROMPT_CACHE_KEY 1>"
  reasoning: {"effort":"medium"}
  store: false
  stream: true
  text: {"verbosity":"low"}
  tool_choice: "auto"
  tools (11; hash=f84cf8af944cec11):
    - function/exec_command: Runs a command in a PTY, returning output or a session ID for ongoing interaction.; args=[cmd, justification, login, max_output_tokens, prefix_rule, sandbox_permissions, shell, tty, workdir, yield_time_ms]; hash=c04108e51a8548c5
    - function/write_stdin: Writes characters to an existing unified exec session and returns recent output.; args=[chars, max_output_tokens, session_id, yield_time_ms]; hash=7fb62d8a3e2df4e2
    - function/list_mcp_resources: Lists resources provided by MCP servers. Resources allow servers to share data that provides cont...; args=[cursor, server]; hash=6792edaff13561bd
    - function/list_mcp_resource_templates: Lists resource templates provided by MCP servers. Parameterized resource templates allow servers ...; args=[cursor, server]; hash=60f17c90ef7a4ebb
    - function/read_mcp_resource: Read a specific resource from an MCP server given the server name and resource URI.; args=[server, uri]; hash=24246896b39008ae
    - function/recall: Return closed compaction intervals from the current thread as a chronological JSON list of interv...; args=[intervals]; hash=d4891e491102d14c
    - function/request_user_input: Request user input for one to three short questions and wait for the response. This tool is only ...; args=[questions]; hash=64a729b25c424fc6
    - custom/apply_patch: The `apply_patch` tool can be used to edit files. Each file path may appear in only one patch ope...; hash=a7af004fdc64b8d6
    - function/view_image: View a local image file from the filesystem when visual inspection is needed. Use this for images...; args=[detail, path]; hash=3b766d5bdec5d50e
    - tool_search: # Tool discovery  Searches over deferred tool metadata with BM25 and exposes matching tools for t...; args=[limit, query]; hash=cea8b3c4515459b0
    - web_search; hash=f103e327c6870a46
-- request 1 (turn) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    Run the input tool.
-- request 2 (turn) --
03:function_call/mcp__elicitation.request_input:{}
04:function_call_output:Wall time: <DURATION> seconds
    Output: | {"action": "accept", "content": {}}
